# pycksum

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README  README.rst  build_manylinux.sh  cython_build_ext.py  pyproject.toml  setup.cfg  setup.py  test.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
cksum/: __init__.py
ext/: ._pycksum.pyx.swp  _cksum.pyx  _pycksum.c  _pycksum.h  _pycksum.pyx  cksum.pyx
pycksum/: __init__.py  main.py
tests/: __init__.py
travis/: build-wheels.sh
