[metadata]
name = pycksum
version = attr: pycksum.__version__
url = https://github.com/sobotklp/pycksum
author = Lewis Sobotkiewicz
author_email = lewis.sobot@gmail.com
description = "Python implementation of cksum algorithm"
long_description = file: README.rst
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.7
packages = pycksum
zip_safe = False

[options.exclude_package_data]
* =
    *.c
    *.h
    
[options.entry_points]
console_scripts =
    pycksum = pycksum.main:main

[build_ext]

